fix mobilee bug

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container section-pt-pd">
         <div class="text-center"><h2 class=" mb-5 title-cstmz" id="projects">Projects</h2></div>
             <div class="card-columns">
-                <div class="card btn-secondary" type="button" data-toggle="modal" data-target="#projectDictateTube">
+                <div class="btn-secondary card" type="button" data-toggle="modal" data-target="#projectDictateTube">
                     <img class="card-img-top" src="./img/project_dictateTube.png" alt="dictateTube Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">DictateTube</h5>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
 
-                <div class="card btn-secondary" type="button" data-toggle="modal" data-target="#projectEasyGrocery">
+                <div class="btn-secondary card" type="button" data-toggle="modal" data-target="#projectEasyGrocery">
                     <img class="card-img-top" src="./img/project_easyGrocery.png" alt="EasyGrocery Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">EasyGrocery</h5>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
 
-                <div class="card btn-secondary" type="button" data-toggle="modal" data-target="#projectCyberFair">
+                <div class="btn-secondary card" type="button" data-toggle="modal" data-target="#projectCyberFair">
                     <img class="card-img-top" src="./img/project_cyberFair.png" alt="Cyberfair Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">A Charming asset to Miaoli</h5>
