fix mobilee bug2

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         <div class="container section-pt-pd">
         <div class="text-center"><h2 class=" mb-5 title-cstmz" id="projects">Projects</h2></div>
             <div class="card-columns">
-                <div class="btn-secondary card" type="button" data-toggle="modal" data-target="#projectDictateTube">
+                <div class="btn-secondary ">
+                <div class="card" type="button" data-toggle="modal" data-target="#projectDictateTube">
                     <img class="card-img-top" src="./img/project_dictateTube.png" alt="dictateTube Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">DictateTube</h5>
@@ -87,7 +88,9 @@
                         <span class="badge badge-warning">Javascript</span>
                     </div>
                 </div>
+                </div>
 
+                <div class="btn-secondary ">
                 <div class="btn-secondary card" type="button" data-toggle="modal" data-target="#projectEasyGrocery">
                     <img class="card-img-top" src="./img/project_easyGrocery.png" alt="EasyGrocery Screenshot">
                     <div class="card-body">
@@ -97,7 +100,9 @@
                         <span class="badge badge-warning">Javascript</span>
                     </div>
                 </div>
+                </div>
 
+                <div class="btn-secondary ">
                 <div class="btn-secondary card" type="button" data-toggle="modal" data-target="#projectCyberFair">
                     <img class="card-img-top" src="./img/project_cyberFair.png" alt="Cyberfair Screenshot">
                     <div class="card-body">
@@ -105,6 +110,7 @@
                         <h6 class="card-subtitle">Developer | Cyberfair | 2011</h6>
                         <p class="card-text"></p>
                     </div>
+                </div>
                 </div>
             </div><!-- card-column(group) -->
 
