fix mobilee bug4

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                         </div>
                     </div> -->
 
-                <div class="btn-secondary " type="button" data-toggle="modal" data-target="#projectEasyGrocery">
-                <div class="btn-secondary card d-block">
+                <div class="btn btn-secondary " type="button" data-toggle="modal" data-target="#projectEasyGrocery">
+                <div class="card d-block">
                     <img class="card-img-top" src="./img/project_easyGrocery.png" alt="EasyGrocery Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">EasyGrocery</h5>
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="btn-secondary " type="button" data-toggle="modal" data-target="#projectCyberFair">
-                <div class="btn-secondary card">
+                <div class="card">
                     <img class="card-img-top" src="./img/project_cyberFair.png" alt="Cyberfair Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">A Charming asset to Miaoli</h5>
