--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         </div>
                     </div> -->
 
-                <div class="btn btn-secondary " type="button" data-toggle="modal" data-target="#projectEasyGrocery">
+                <div class="btn btn-secondary d-block" type="button" data-toggle="modal" data-target="#projectEasyGrocery" style="height:auto; width: 100%;">
                 <div class="card d-block">
                     <img class="card-img-top" src="./img/project_easyGrocery.png" alt="EasyGrocery Screenshot">
                     <div class="card-body">
@@ -110,7 +110,7 @@
                 </div>
                 </div>
 
-                <div class="btn-secondary " type="button" data-toggle="modal" data-target="#projectCyberFair">
+                <div class="btn-secondary " type="button" data-toggle="modal" data-target="#projectCyberFair" style="height:600px;">
                 <div class="card">
                     <img class="card-img-top" src="./img/project_cyberFair.png" alt="Cyberfair Screenshot">
                     <div class="card-body">
