fix mobilee bug4

--- a/index.html
+++ b/index.html
@@ -78,28 +78,37 @@
         <div class="container section-pt-pd">
         <div class="text-center"><h2 class=" mb-5 title-cstmz" id="projects">Projects</h2></div>
             <div class="card-columns">
-                <!-- <div class="btn-secondary rounded " type="button" data-toggle="modal" data-target="#projectDictateTube">
+                <div >
+                <div class="card" >
                     <img class="card-img-top" src="./img/project_dictateTube.png" alt="dictateTube Screenshot">
                     <div class="card-body">
-                            <h5 class="card-title">DictateTube</h5>
-                            <h6 class="card-subtitle">Developer | Cyberfair | Aug. 2018 - present</h6>
-                            <p class="card-text"></p>
-                            <span class="badge badge-warning">Javascript</span>
+                        <h5 class="card-title">DictateTube</h5>
+                        <h6 class="card-subtitle">Developer | Cyberfair | Aug. 2018 - present</h6>
+                        <p class="card-text"></p>
+                        <span class="badge badge-warning">Javascript</span>
                     </div>
-                </div> -->
+                    <div class="modal-footer " type="button" data-toggle="modal" data-target="#projectDictateTube">
+                        <a ><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
+                </div>
 
-                <!-- <div class="card" >
-                        <img class="card-img-top" src="./img/project_dictateTube.png" alt="dictateTube Screenshot">
-                        <div class="card-body">
-                            <h5 class="card-title">DictateTube</h5>
-                            <h6 class="card-subtitle">Developer | Cyberfair | Aug. 2018 - present</h6>
-                            <p class="card-text"></p>
-                            <span class="badge badge-warning">Javascript</span>
-                        </div>
-                    </div> -->
+                <div class="card btn-secondary"   data-toggle="modal" data-target="#projectDictateTube">
+                    <img class="card-img-top" src="./img/project_dictateTube.png" alt="dictateTube Screenshot">
+                    <div class="card-body">
+                        <h5 class="card-title">DictateTube</h5>
+                        <h6 class="card-subtitle">Developer | Cyberfair | Aug. 2018 - present</h6>
+                        <p class="card-text"></p>
+                        <span class="badge badge-warning">Javascript</span>
+                    </div>
+                    <div class="modal-footer " type="button" data-toggle="modal" data-target="#projectDictateTube">
+                        <a ><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
+                </div>
 
-                <div class="btn btn-secondary d-block" type="button" data-toggle="modal" data-target="#projectEasyGrocery" style="height:auto; width: 100%;">
-                <div class="card d-block">
+                <div class="btn-secondary " type="button" data-toggle="modal" data-target="#projectEasyGrocery">
+                <div class="btn-secondary card">
                     <img class="card-img-top" src="./img/project_easyGrocery.png" alt="EasyGrocery Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">EasyGrocery</h5>
@@ -110,8 +119,8 @@
                 </div>
                 </div>
 
-                <div class="btn-secondary " type="button" data-toggle="modal" data-target="#projectCyberFair" style="height:600px;">
-                <div class="card">
+                <div class="btn-secondary " type="button" data-toggle="modal" data-target="#projectCyberFair">
+                <div class="btn-secondary card">
                     <img class="card-img-top" src="./img/project_cyberFair.png" alt="Cyberfair Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">A Charming asset to Miaoli</h5>
