reset default experience slide

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             </h5>
                           </div>
                       
-                          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#expeAccrodion">
+                          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#expeAccrodion">
                             <div class="card-body">
                                 <div id="schoolRepresentative" class="carousel slide mb-3" data-ride="carousel">
                                     <ol class="carousel-indicators">
@@ -376,7 +376,7 @@
                             </h5>
                           </div>
                       
-                          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#expeAccrodion">
+                          <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#expeAccrodion">
                             <div class="card-body">
                                 <div id="Chairperson" class="carousel slide mb-3" data-ride="carousel">
                                     <ol class="carousel-indicators">
@@ -482,7 +482,7 @@
                             </a>
                     </li>
                     <li class="list-inline-item social-style mt-2 mb-2 mr-0">
-                            <span class="d-inline-block text-dark" style="width:280px;" ><i class="fas fa-phone fa-lg"></i>
+                            <span class="d-inline-block" style="width:280px;" ><i class="fas fa-phone fa-lg"></i>
                                 <i class="h5 ml-2">+1 236 865-9199</i>
                             </span>
                     </li>
