--- a/index.html
+++ b/index.html
@@ -20,29 +20,29 @@
 
     <title>Luca</title>
 </head>
-<body data-spy="scroll" data-target="#navbar-site" data-offset="120">
+<body data-spy="scroll" data-target="#navbar-site" data-offset="140">
 
     <!-- NAVIGATION -->
-    <div id="navbar-site" class="navbar navbar-dark bg-dark navbar-expand sticky-top">
+    <div id="navbar-site" class="navbar navbar-dark bg-dark navbar-expand fixed-top">
         <div class="container d-flex justify-content-center text-center justify-content-sm-between">
 
             <!-- <div class="navbar-brand d-none d-sm-block h1" href="#">
                 Luca Studio
             </div> -->
-            <img class="navbar-brand d-none d-sm-block" src="./img/logo-lg-white.png" alt="logo" style="width:100px">
+            <img class="navbar-brand d-none d-sm-block" src="./img/logo-lg-white.png" alt="logo" style="width:130px">
 
             <ul class="navbar-nav ">
-                <li class="nav-item"><a class=" nav-link active" href="#projects">Porjects</a></li>
-                <li class="nav-item"><a class=" nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class=" nav-link" href="#experience">Experience</a></li>
-                <li class="nav-item"><a class=" nav-link" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class=" nav-link active h5" href="#projects">Porjects</a></li>
+                <li class="nav-item"><a class=" nav-link h5" href="#about">About</a></li>
+                <li class="nav-item"><a class=" nav-link h5" href="#experience">Experience</a></li>
+                <li class="nav-item"><a class=" nav-link h5" href="#contact">Contact</a></li>
 
             </ul><!-- navbar-nav -->
         </div><!-- container -->
     </div><!-- navbar -->
 
     <!-- JUMBOTRON -->
-    <div class="jumbotron jumbotron-fluid d-none d-sm-block pt-5">
+    <div class="jumbotron jumbotron-fluid d-none d-sm-block pt-5 mt-5">
         <div class="jumbotron-style bg_header-top"></div>
         <div class="jumbotron-style bg_header-light"></div>
         <div class="jumbotron-style bg_header-end"></div>
@@ -84,7 +84,7 @@
                     <img class="card-img-top" src="./img/project_dictateTube.png" alt="dictateTube Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">DictateTube</h5>
-                        <h6 class="card-subtitle">Developer | Cyberfair | Aug. 2018 - present</h6>
+                        <h6 class="card-subtitle">Developer | Personal Project <br> Aug. 2018 - present</h6>
                         <p class="card-text"></p>
                         <!-- <span class="badge badge-warning">Javascript</span> -->
                     </div>
@@ -97,9 +97,20 @@
                     <img class="card-img-top" src="./img/project_easyGrocery.png" alt="EasyGrocery Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">EasyGrocery</h5>
-                        <h6 class="card-subtitle">Developer | Metro Vancouver Project | May 2018</h6>
+                        <h6 class="card-subtitle">Developer | Metro Vancouver Project <br> May 2018</h6>
                         <p class="card-text"></p>
                         <!-- <span class="badge badge-warning">Javascript</span> -->
+                    </div>
+                    <div class="card-footer d-flex justify-content-end">
+                        <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i></span>
+                    </div>
+                </div>
+                <div class="btn-secondary card" data-toggle="modal" data-target="#projectMineSweeper">
+                    <img class="card-img-top" src="./img/project_MineSweeper_icon-01.png" alt="Mine Sweeper Screenshot">
+                    <div class="card-body">
+                        <h5 class="card-title">Mine Sweeper</h5>
+                        <h6 class="card-subtitle">Developer | Personal Project <br> Mar 2017 - present</h6>
+                        <p class="card-text"></p>
                     </div>
                     <div class="card-footer d-flex justify-content-end">
                         <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i></span>
@@ -110,7 +121,7 @@
                     <img class="card-img-top" src="./img/project_cyberFair.png" alt="Cyberfair Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">A Charming asset to Miaoli</h5>
-                        <h6 class="card-subtitle">Developer | Cyberfair | 2011</h6>
+                        <h6 class="card-subtitle">Developer | Cyberfair <br> 2011</h6>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer d-flex justify-content-end">
@@ -132,9 +143,9 @@
                         <div class="modal-body">
                             <img class="card-img" src="./img/project_dictateTube.png" alt="dictateTube Screenshot">
                             <ul class="mt-4">
-                                <li>Developed a JavaScript-based web application with Firebase database for generating grocery list</li>
-                                <li>Generate a shopping list based on the user’s nutritional requirement</li>
-                                <li>Learned Firebase, JavaScript and agile methodology of 5-person team</li>
+                                <li>Designed a web application for English learners to practice listening skills by dictating YouTube videos</li>
+                                <li>Developed a strong understanding of the Document-Object-Model and Model-View-Controller architecture</li>
+                                <li>Completed this project during summer holidays</li>
                             </ul>
                         </div>
                         <div class="modal-footer">
@@ -192,6 +203,29 @@
                 </div><!-- modal-dialog -->
             </div><!-- modal -->
 
+            <div class="modal fade" id="projectMineSweeper" tabindex="-1" role="dialog" aria-labelledby="projectMineSweeper" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="projectMineSweeperTitle">Mine Sweeper</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <img class="card-img" src="./img/project_MineSweeper.png" alt="EasyGrocery Screenshot">
+                            <ul class="mt-4">
+                                <li>Developed as a personal project during the 1st term of CST</li>
+                                <li>Learned recursive method to implement the game</li>
+                            </ul>
+                        </div>
+                        <div class="modal-footer">
+                            <a class="btn btn-outline-dark float-right" href="http://www.globalschoolnet.org/gsncf/narrative_view.cfm?pID=6589" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div><!-- modal-content -->
+                </div><!-- modal-dialog -->
+            </div><!-- modal -->
+
         </div><!-- container -->
     </div>
 
@@ -207,7 +241,11 @@
             </div>
             <div class="col-sm-8">
                 <h2 class="mt-5 mb-5 title-cstmz"  id="about">About Me</h2>
-                <p class="aboutme-text">I've had a keen interest in creating new things ever since I was a kid. It gives me great enjoyment by making tools that help people to solve their problems. I am fortunate enough to be a CST student in BCIT with a bachelor's degree in design school. My goal is to combine both experiences in design and computer to produce creative software that is competitive in the market.</p>
+                <p class="aboutme-text">
+                    I've had a keen interest in creating new things ever since I was a kid. 
+                    It gives me great enjoyment by making tools that help people to solve their problems. 
+                    I am fortunate enough to be a Computer System Technology student in BCIT after graduating from design school.
+                    My goal is to produce creative software that everybody will use.</p>
                 <a class="btn btn-primary" href="#coursework" data-toggle="collapse" 
                 role="button" aria-expanded="false" aria-controls="Coursework">
                 Coursework</a>
@@ -366,7 +404,7 @@
                                     </div>
                                     </div>
                                 <h5 class="card-title text-dark font-weight-bold">School Representative</h5>
-                                <h6 class="card-subtitle  mb-2 text-primary">Designer Week: Le Festival du Design | Paris, France</h6>
+                                <h6 class="card-subtitle  mb-2 text-primary">Designer Week: Le Festival du Design | Paris, France<br>May 2016 - Jun 2016</h6>
                                 <p class="card-text">
                                             <i class="fas fa-asterisk fa-xs mr-2 text-secondary"></i>
                                             Interact with guests, Introduced the exhibit and university to the guests
@@ -411,7 +449,7 @@
                                     </div>
                                     </div>
                                 <h5 class="card-title text-dark font-weight-bold">Chairperson</h5>
-                                <h6 class="card-subtitle  mb-2 text-primary">Young Designer’ Exhibition: Shih Chien University section | Taipei, Taiwan</h6>
+                                <h6 class="card-subtitle  mb-2 text-primary">Young Designer’ Exhibition: Shih Chien University section | Taipei, Taiwan<br>Jul 2015 - Jun 2016</h6>
                                 <p class="card-text">
                                             <i class="fas fa-asterisk fa-xs mr-2 text-secondary"></i>
                                             Served as coordinator with school, students, supplier, and exhibition organizer
@@ -448,7 +486,7 @@
                                     </div>
                                     </div>
                                 <h5 class="card-title text-dark font-weight-bold">Package Designer (Co-op program)</h5>
-                                <h6 class="card-subtitle  mb-2 text-primary">Glory Innovations Inc. | Taipei, Taiwan</h6>
+                                <h6 class="card-subtitle  mb-2 text-primary">Glory Innovations Inc. | Taipei, Taiwan<br>Sep 2015 - Feb 2016</h6>
                                 <p class="card-text">
                                             <i class="fas fa-asterisk fa-xs mr-2 text-secondary"></i>
                                             Designed the package for the company to participate the annual package exhibition
@@ -529,7 +567,7 @@
     <!-- Scrolling Controller -->
     <script>
     $(function() {
-    var topoffset = 100; //variable for menu height
+    var topoffset = 120; //variable for menu height
 
     //Use smooth scrolling when clicking on navigation
     $('.navbar-nav a').click(function() {
