--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <title>Luca</title>
 </head>
-<body data-spy="scroll" data-target="#navbar-site" data-offset="140">
+<body data-spy="scroll" data-target="#navbar-site" data-offset="120">
 
     <!-- NAVIGATION -->
     <div id="navbar-site" class="navbar navbar-dark bg-dark navbar-expand fixed-top">
@@ -29,13 +29,13 @@
             <!-- <div class="navbar-brand d-none d-sm-block h1" href="#">
                 Luca Studio
             </div> -->
-            <img class="navbar-brand d-none d-sm-block" src="./img/logo-lg-white.png" alt="logo" style="width:130px">
+            <img class="navbar-brand d-none d-sm-block" src="./img/logo-lg-white.png" alt="logo" style="width:100px">
 
             <ul class="navbar-nav ">
-                <li class="nav-item"><a class=" nav-link active h5" href="#projects">Porjects</a></li>
-                <li class="nav-item"><a class=" nav-link h5" href="#about">About</a></li>
-                <li class="nav-item"><a class=" nav-link h5" href="#experience">Experience</a></li>
-                <li class="nav-item"><a class=" nav-link h5" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class=" nav-link active" href="#projects">Porjects</a></li>
+                <li class="nav-item"><a class=" nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class=" nav-link" href="#experience">Experience</a></li>
+                <li class="nav-item"><a class=" nav-link" href="#contact">Contact</a></li>
 
             </ul><!-- navbar-nav -->
         </div><!-- container -->
@@ -567,7 +567,7 @@
     <!-- Scrolling Controller -->
     <script>
     $(function() {
-    var topoffset = 120; //variable for menu height
+    var topoffset = 100; //variable for menu height
 
     //Use smooth scrolling when clicking on navigation
     $('.navbar-nav a').click(function() {
