--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <button class="btn btn-lg btn-secondary mt-4">View my résumé</button>
                 </a>  
             </p>
-            <p class="d-none d-md-none d-sm-block mt-4">
+            <p class="d-none d-md-none d-sm-block mt-3">
                 <span class="display-3 font-weight-normal">Hello,<br></span>
                 <span class="display-3 font-weight-bold">I'm Luca.</span><br>
                 <span class="lead">I'm a CST Co-op student in BCIT.</span><br>
@@ -63,7 +63,7 @@
             </p>
         </div><!-- container -->
     </div>
-    <div class=" d-sm-none position-relative bg-light">
+    <div class=" d-sm-none position-relative bg-light pt-5">
         <p class="d-block d-sm-none text-dark pt-4 pb-2 ml-3 mr-1 text-center">
             <span class="display-4 font-weight-normal">Hello,<br></span>
             <span class="display-4 font-weight-bold">My name is Luca.</span><br>
