fix mine sweeper links

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <img class="card-img-top" src="./img/project_MineSweeper_icon-01.png" alt="Mine Sweeper Screenshot">
                     <div class="card-body">
                         <h5 class="card-title">Mine Sweeper</h5>
-                        <h6 class="card-subtitle">Developer | Personal Project <br> Mar 2017 - present</h6>
+                        <h6 class="card-subtitle">Developer | Personal Project <br> Mar 2018 - present</h6>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer d-flex justify-content-end">
@@ -220,7 +220,7 @@
                             </ul>
                         </div>
                         <div class="modal-footer">
-                            <a class="btn btn-outline-dark float-right" href="http://www.globalschoolnet.org/gsncf/narrative_view.cfm?pID=6589" target="_blank"><i class="fas fa-link"></i></a>
+                            <a class="btn btn-outline-dark float-right" href="https://github.com/lucahsieh/MineSweeper" target="_blank"><i class="fas fa-file-code"></i></a>
                         </div>
                     </div><!-- modal-content -->
                 </div><!-- modal-dialog -->
