--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img class="navbar-brand d-none d-sm-block" src="./img/logo-lg-white.png" alt="logo" style="width:100px">
 
             <ul class="navbar-nav ">
-                <li class="nav-item"><a class=" nav-link active" href="#projects">Porjects</a></li>
+                <li class="nav-item"><a class=" nav-link active" href="#projects">Projects</a></li>
                 <li class="nav-item"><a class=" nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class=" nav-link" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class=" nav-link" href="#contact">Contact</a></li>
